force-app/main/default/objects/mkto_si__Value__c/mkto_si__Value__c.object-meta.xml
<CustomObject>
    <label>Value</label>
    <nameField>
        <label>Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>