force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__Date__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>