force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__DateTime__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>