force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__Email__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>