force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__Phone__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>