force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__String__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__String__c</fullName>
    <label>String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>