force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__TextArea__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__TextArea__c</fullName>
    <label>Text Area</label>
    <type>TextArea</type>
</CustomField>