force-app/main/default/objects/mkto_si__Value__c/fields/mkto_si__Url__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Url__c</fullName>
    <label>Url</label>
    <type>Url</type>
</CustomField>